--- a/index.html
+++ b/index.html
@@ -36,28 +36,25 @@
             <div class="audioMenu">
                 <audio src="" id="audio1" controls></audio>
                 <div class="discTurn">
-                    <div class="disc">
-                        <svg width="150px" height="150px" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16 32C24.8366 32 32 24.8366 32 16C32 7.16344 24.8366 0 16 0C7.16344 0 0 7.16344 0 16C0 24.8366 7.16344 32 16 32Z" fill="#473333"/>
-                        <path d="M16.0003 23.2727C20.0169 23.2727 23.273 20.0166 23.273 16C23.273 11.9834 20.0169 8.72729 16.0003 8.72729C11.9836 8.72729 8.72754 11.9834 8.72754 16C8.72754 20.0166 11.9836 23.2727 16.0003 23.2727Z" fill="#EE4F07"/>
-                        <path d="M15.9999 18.9091C17.6066 18.9091 18.909 17.6067 18.909 16C18.909 14.3934 17.6066 13.0909 15.9999 13.0909C14.3933 13.0909 13.0908 14.3934 13.0908 16C13.0908 17.6067 14.3933 18.9091 15.9999 18.9091Z" fill="white"/>
-                        </svg>
+                    <div class="disc-wrapper">
+                        <div class="disc discBg"></div>
+                        <svg class="disc discMain" height="150px" width="150px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path style="fill:#3C5D76;" d="M256,0C114.842,0,0,114.84,0,256s114.842,256,256,256s256-114.84,256-256S397.158,0,256,0z"></path> <path style="fill:#1E2E3B;" d="M256,512c141.158,0,256-114.84,256-256S397.158,0,256,0"></path> <g> <path style="fill:#FFFFFF;" d="M159.71,114.488C186.253,93.626,219.7,81.171,256,81.171V43.707 c-46.634,0-89.468,16.579-122.921,44.149L159.71,114.488z"></path> <path style="fill:#FFFFFF;" d="M87.857,133.079C60.285,166.531,43.707,209.366,43.707,256h37.463 c0-36.301,12.457-69.747,33.317-96.29L87.857,133.079z"></path> </g> <path style="fill:#BFE4F8;" d="M256,387.122c-72.301,0-131.122-58.821-131.122-131.122S183.699,124.878,256,124.878 S387.122,183.699,387.122,256S328.301,387.122,256,387.122z"></path> <path style="fill:#93C7EF;" d="M256,124.878c72.301,0,131.122,58.821,131.122,131.122S328.301,387.122,256,387.122"></path> <path style="fill:#FFFFFF;" d="M256,312.195c-30.986,0-56.195-25.209-56.195-56.195s25.209-56.195,56.195-56.195 s56.195,25.209,56.195,56.195S286.986,312.195,256,312.195z"></path> </g></svg>
                     </div>
                     <div class="btnMenu left">
                     </div>
                 </div>
                 <div class="menu">
                     <div class="textMenu">
-                        <h1 id="header">Young Kai</h1>
-                        <p id="audioName">Blue</p>
+                        <h1 id="header">-</h1>
+                        <p id="audioName">-</p>
                         <div class="progress"></div>
                     </div>
                     <div class="btnMenu right">
-                        <img class="fwLeft" src="forward-button.png" alt="">
-                        <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <img class="fwLeft btnBefore" src="forward-button.png" alt="">
+                        <svg class="controls" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="black"/>
                         </svg>
-                        <img src="forward-button.png" alt="">
+                        <img class="btnForward" src="forward-button.png" alt="">
                     </div>
                 </div>
             </div>
