--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Sigmar&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">  
 </head>
 <body>
     <div class="container" id="container">
@@ -51,9 +57,10 @@
                     </div>
                     <div class="btnMenu right">
                         <img class="fwLeft btnBefore" src="forward-button.png" alt="">
-                        <svg class="controls" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="black"/>
+                        <svg class="controls play-icon" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path id="controlsPath" d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="black"/>
                         </svg>
+                        <svg class="controls pause-icon" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M2 6C2 4.11438 2 3.17157 2.58579 2.58579C3.17157 2 4.11438 2 6 2C7.88562 2 8.82843 2 9.41421 2.58579C10 3.17157 10 4.11438 10 6V18C10 19.8856 10 20.8284 9.41421 21.4142C8.82843 22 7.88562 22 6 22C4.11438 22 3.17157 22 2.58579 21.4142C2 20.8284 2 19.8856 2 18V6Z" fill="#000"></path> <path d="M14 6C14 4.11438 14 3.17157 14.5858 2.58579C15.1716 2 16.1144 2 18 2C19.8856 2 20.8284 2 21.4142 2.58579C22 3.17157 22 4.11438 22 6V18C22 19.8856 22 20.8284 21.4142 21.4142C20.8284 22 19.8856 22 18 22C16.1144 22 15.1716 22 14.5858 21.4142C14 20.8284 14 19.8856 14 18V6Z" fill="#000"></path> </g></svg>
                         <img class="btnForward" src="forward-button.png" alt="">
                     </div>
                 </div>
@@ -100,8 +107,36 @@
                 <canvas id="canvas1"></canvas>
             </div>
         </section>
+
+        <section class="myself">
+            <div class="right-text">
+                <div class="old">
+                    <h1>20</h1>
+                    <h1>Years Old</h1>
+                </div>
+                <div class="nameMain">
+                    <h3>Gokerwow A.K.A</h3>
+                    <h2>BRILLIAN MAULANA SYAH</h2>
+                    <h2 class="otherName">(백리안)</h2>
+                </div>
+                <p>BRILLIAN MAULANA SYAH <br> is a university student at the University of Jember with a deep passion for learning and discovery. As an aspiring learner, he is always curious about how things work, constantly exploring new ideas and seeking a deeper understanding of the world around him. His inquisitive nature drives him to question, analyze, and innovate, making him a dedicated individual who thrives on knowledge and growth.</p>
+            </div>
+            <div class="img-wrapper">
+                <img src="assets/LITBANG_2_Brillian Maulana Syah.png" alt="">
+            </div>
+            <div class="about-wrapper">
+                <ul>
+                    <li class="li-item"><span>ABOUT</span></li>
+                    <li class="li-item"><span>EDUCATIONS</span></li>
+                    <li class="li-item"><span>SKILLS</span></li>
+                    <li class="li-item"><span>TOOLS</span></li>
+                </ul>
+            </div>
+        </section>
     </div>
 
     <script src="main.js"></script>
+    <script src="anime.min.js"></script>
 </body>
 </html>
+
