update tools and skills

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </svg></a>
             </li>
             <li><a href="#myself">MYSELF</a></li>
-            <li><a href="">SKILL</a></li>
+            <li><a class="skill-navbar" href="#aboutWrapper">SKILL</a></li>
             <li><a href="">WORK</a></li>
             <li><a href="">CONTACT</a></li>
         </ul>
@@ -174,11 +174,48 @@
                             </div>
                         </div>
                     </div>
-            </div>
+                    <div class="tools-container hidden">
+                        <div class="tools-up">
+                            <div class="web-tools tools-item">
+                                <h1>WEB</h1>
+                                <div class="tools-img">
+                                    <img src="assets/symbol-html-react-angular-jquery-removebg-preview.png" alt="">
+                                    <img src="assets/css-3.svg" alt="">
+                                    <img src="assets/png-transparent-web-development-html-responsive-web-design-logo-javascript-html-angle-web-design-text-removebg-preview.png" alt="">
+                                    <img src="assets/logo-laravel-icon-1024.png" alt="">
+                                </div>
+                            </div>
+                            <div class="mob-tools tools-item">
+                                <h1>MOBILE</h1>
+                                <div class="tools-img">
+                                    <img src="assets/355-3557482_package-icon-png.png" alt="">
+                                    <img src="assets/kotlin.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tools-down ">
+                            <div class="vid-tools tools-item">
+                                <h1>VIDEO</h1>
+                                <div class="tools-img">
+                                    <img src="assets/AE.png" alt="">
+                                    <img src="assets/PR.png" alt="">
+                                    <img src="assets/1664536987alight-motion-logo-transparent.png" alt="">
+                                    <img src="assets/node.jpeg" alt="">
+                                </div>
+                            </div>                           
+                            <div class="render-tools tools-item">
+                                <h1>3D</h1>
+                                <div class="tools-img">
+                                    <img src="assets/blender-icon-2048x1905-xng8cdjs.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             <div class="img-wrapper">
                 <img id="img-about" class="img-default" src="assets/LITBANG_2_Brillian Maulana Syah.png" alt="">
             </div>
-            <div class="about-wrapper">
+            <div id="aboutWrapper" class="about-wrapper">
                 <ul>
                     <li class="li-item about active"><span>ABOUT</span></li>
                     <li class="li-item education"><span>EDUCATIONS</span></li>
