--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container" id="container">
@@ -35,7 +37,7 @@
             <li><a href="#myself">MYSELF</a></li>
             <li><a class="skill-navbar" href="#aboutWrapper">SKILL</a></li>
             <li><a href="">WORK</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="#footer">CONTACT</a></li>
         </ul>
 
         <div class="sideMenu collapsed">
@@ -224,6 +226,45 @@
                 </ul>
             </div>
         </section>
+
+        <footer id="footer" class="footer-container">
+            <div class="text-top">
+                <h1>GOKERWOW</h1>
+                <h3>PORTOFOLIO WEB</h3>
+            </div>
+            <ul class="navbar-footer">
+                <li><a href="#hero">HOME</a></li>
+                <li><a href="#myself">MYSELF</a></li>
+                <li><a class="skill-navbar" href="#aboutWrapper">SKILL</a></li>
+                <li><a href="">WORK</a></li>
+                <li><a href="#footer">CONTACT</a></li>
+            </ul>
+            <div class="contact">
+                <div class="contact-item">
+                    <div class="contactBG"></div>
+                    <a href=""><img src="assets/icons8-facebook-logo-500.png" alt=""></a>
+                </div>
+                <div class="contact-item">
+                    <div class="contactBG"></div>
+                    <a href=""><img src="assets/icons8-instagram-logo-500.png" alt=""></a>
+                </div>
+                <div class="contact-item">
+                    <div class="contactBG"></div>
+                    <a href=""><img src="assets/icons8-discord-logo-500.png" alt=""></a>
+                </div>
+                <div class="contact-item">
+                    <div class="contactBG"></div>
+                    <a href=""><img src="assets/icons8-whatsapp-logo-500.png" alt=""></a>
+                </div>
+            </div>
+            <div class="text-bottom">
+                <div class="color-idea">
+                    <p>Color Idea by </p>
+                    <p class="tag"><a href="https://www.instagram.com/tiyoouw?igsh=enRxcjZwNWo4NGow" target="_blank">@tiyoouw</a></p>
+                </div>
+                <p>Design Idea by Pinterest</p>
+            </div>
+        </footer>
     </div>
 
     <script src="main.js"></script>
