update footer and work

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="load-background1"></div>
+    <div class="load-background2"></div>
+    <div class="load Web1">
+        <h1>GOKERWOW</h1>
+    </div>
+
     <div class="container" id="container">
         <ul class="navbar">
             <li><a href="#hero">
@@ -36,7 +42,7 @@
             </li>
             <li><a href="#myself">MYSELF</a></li>
             <li><a class="skill-navbar" href="#aboutWrapper">SKILL</a></li>
-            <li><a href="">WORK</a></li>
+            <li><a href="#works">WORK</a></li>
             <li><a href="#footer">CONTACT</a></li>
         </ul>
 
@@ -227,6 +233,150 @@
             </div>
         </section>
 
+        <section class="breakSect">
+
+        </section>
+
+        <section id="works" class="work-container">
+            <div class="work-main">
+                <ul class="nav-work">
+                    <div class="nav-workBG"></div>
+                    <li class="web-workNav"><span>WEB PROJECTS</span></li>
+                    <li class="mob-workNav"><span>MOBILE PROJECTS</span></li>
+                    <li class="vid-workNav"><span>VIDEO PROJECTS</span></li>
+                    <li class="render-workNav"><span>3D PROJECTS</span></li>
+                </ul>
+                <div class="multiple-work">
+                    <div class="work-template web-work">
+                        <div class="webWork-item">
+                            <div class="work-img web-img"></div>
+                            <div class="text-work">
+                                <h1>NOVASPACE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img web-img"></div>
+                            <div class="text-work">
+                                <h1>NOVASPACE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img web-img"></div>
+                            <div class="text-work">
+                                <h1>NOVASPACE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img web-img"></div>
+                            <div class="text-work">
+                                <h1>NOVASPACE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img web-img"></div>
+                            <div class="text-work">
+                                <h1>NOVASPACE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                    </div>
+                    <div class="work-template mob-work hidden">
+                        <div class="webWork-item">
+                            <div class="work-img mob-img"></div>
+                            <div class="text-work">
+                                <h1>EXAMPLE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img mob-img"></div>
+                            <div class="text-work">
+                                <h1>EXAMPLE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img mob-img"></div>
+                            <div class="text-work">
+                                <h1>EXAMPLE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img mob-img"></div>
+                            <div class="text-work">
+                                <h1>EXAMPLE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img mob-img"></div>
+                            <div class="text-work">
+                                <h1>EXAMPLE</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                    </div>
+                    <div class="work-template vid-work hidden">
+                        <div class="webWork-item">
+                            <div class="work-img vid-img"></div>
+                            <div class="text-work">
+                                <h1>AYANOKOUJI VS RYUUEN</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img vid-img"></div>
+                            <div class="text-work">
+                                <h1>AYANOKOUJI VS RYUUEN</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img vid-img"></div>
+                            <div class="text-work">
+                                <h1>AYANOKOUJI VS RYUUEN</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img vid-img"></div>
+                            <div class="text-work">
+                                <h1>AYANOKOUJI VS RYUUEN</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                        <div class="webWork-item">
+                            <div class="work-img vid-img"></div>
+                            <div class="text-work">
+                                <h1>AYANOKOUJI VS RYUUEN</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatibus ab error, quia optio at excepturi officiis? Debitis a hic, delectus velit nostrum, sit temporibus perferendis ipsum, odit soluta aut?</p>
+                            </div>
+                            <h2>15-01-2025</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <footer id="footer" class="footer-container">
             <div class="text-top">
                 <h1>GOKERWOW</h1>
@@ -236,25 +386,25 @@
                 <li><a href="#hero">HOME</a></li>
                 <li><a href="#myself">MYSELF</a></li>
                 <li><a class="skill-navbar" href="#aboutWrapper">SKILL</a></li>
-                <li><a href="">WORK</a></li>
+                <li><a href="#works">WORK</a></li>
                 <li><a href="#footer">CONTACT</a></li>
             </ul>
             <div class="contact">
                 <div class="contact-item">
                     <div class="contactBG"></div>
-                    <a href=""><img src="assets/icons8-facebook-logo-500.png" alt=""></a>
+                    <a href="https://www.facebook.com/share/1HbxgW77RA/?mibextid=qi2Omg" target="_blank"><img src="assets/icons8-facebook-logo-500.png" alt=""></a>
                 </div>
                 <div class="contact-item">
                     <div class="contactBG"></div>
-                    <a href=""><img src="assets/icons8-instagram-logo-500.png" alt=""></a>
+                    <a href="https://www.instagram.com/gokerwow?igsh=MTl0bHlrZXJ5Y3l3Yg==" target="_blank"><img src="assets/icons8-instagram-logo-500.png" alt=""></a>
                 </div>
                 <div class="contact-item">
                     <div class="contactBG"></div>
-                    <a href=""><img src="assets/icons8-discord-logo-500.png" alt=""></a>
+                    <a href="https://discordapp.com/users/549876271266398209" target="_blank"><img src="assets/icons8-discord-logo-500.png" alt=""></a>
                 </div>
                 <div class="contact-item">
                     <div class="contactBG"></div>
-                    <a href=""><img src="assets/icons8-whatsapp-logo-500.png" alt=""></a>
+                    <a href="http://Wa.me/62895630422423" target="_blank"><img src="assets/icons8-whatsapp-logo-500.png" alt=""></a>
                 </div>
             </div>
             <div class="text-bottom">
